--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600&family=Poppins&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <title>Proyecto final</title>
 </head>
 <body>
     <header>
-        <img src="img/logo.svg" alt="logo">
+        <img id="logo" src="img/logo.svg" alt="logo">
         <nav>
             <ul type="none">
                 <li>Pricing</li>
@@ -18,13 +22,13 @@
                 <li>Community</li>
             </ul>
         </nav>
-        <a href="#">Get started</a>
+        <button class="get"><a href="#">Get started</a></button>
     </header>
     <main id="banner">
         <div>
-            <h1>Bring everyone together to build better products.</h1>
-            <p>Manage makes it simple for software teams
-                to plan day-to-day tasks while keeping the 
+            <h1>Bring everyone<br> together to build<br> better products.</h1>
+            <p>Manage makes it simple for software teams<br>
+                to plan day-to-day tasks while keeping the<br>
                 large team goals in view </p>
             <button>Get started</button>
         </div>
@@ -65,9 +69,39 @@
             <p>Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one 
                 team productivity solution.</p>
         </div>
-
+    </section>
+    <section id="card">
+        <h2>What they´ve said</h2>
+        <div class="cards">
+            <img src="img/avatar-anisha.png">
+            <h3>Ali Bravo</h3>
+            <p>“Manage has supercharged our team´s workflow. 
+                The ability to maintain visibility on larger milestones
+                at all times keeps everyone motivated.”</p>
+        </div>
+        <div class="cards">
+            <img src="img/avatar-ali.png">
+            <h3>Ali Bravo</h3>
+            <p>“Manage has supercharged our team´s workflow. 
+                The ability to maintain visibility on larger milestones
+                at all times keeps everyone motivated.”</p>
+        </div>
+        <div class="cards">
+            <img src="img/avatar-richard.png">
+            <h3>Ali Bravo</h3>
+            <p>“Manage has supercharged our team´s workflow. 
+                The ability to maintain visibility on larger milestones
+                at all times keeps everyone motivated.”</p>
         </div>
     </section>
+    <section>
+        <div id="banner-final">
+            <h2>Simplify hoy your team
+                words today.</h2>
+            <button>Get started</button>
+        </div>
+    </section>
+    
     <footer>
         <img src="img/logo.svg" alt="logo">
         <div>
