--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="get"><a href="#">Get started</a></button>
     </header>
     <main id="banner">
-        <h1>NO VEO MIS CAMBIOS</h1>
+        <h1>Nueva prueba</h1>
         <div>
             <h1>Bring everyone<br> together to build<br> better products.</h1>
             <p>Manage makes it simple for software teams<br>
