--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Proyecto final</title>
 </head>
 <body>
+    <h1>no clona</h1>
     <header>
         <img src="img/logo.svg" alt="logo">
         <nav>
