--- a/index.html
+++ b/index.html
@@ -30,80 +30,83 @@
             <p>Manage makes it simple for software teams<br>
                 to plan day-to-day tasks while keeping the<br>
                 large team goals in view </p>
-            <button>Get started</button>
+            <button class="get-1"><a href="#">Get started</a></button>
         </div>
         <div>
             <img src="img/illustration-intro.svg">
         </div>
     </main>
-    <section>
+    <section id="beneficios">
         <article> 
-            <h2>What´s different about
+            <h2>What´s different about<br>
                 Manage? </h2>
-            <p>Manage provides all the functionality your
-                teas needs, without the complexity. Our software
-                is tailor-made for modern digital product teams</p>
+            <p>Manage provides all the functionality your <br>
+                teas needs, without the complexity. Our<br> software
+                is tailor-made for modern digital <br> teams.</p>
         </article>
+        <section>
         <div class="contenedor">
             <p class=num>01</p>
         </div>
         <div class="contenido">
             <h3>Track company-wide progress</h3>
-            <p>See how your day-to-day tasks fit into the wider v
-                ision. Go from tracking progress at the milestone level all the way done to the smallest of details. 
-                Never lose sight of the bigger picture again.</p>
+            <p>See how your day-to-day tasks fit into the wider vision.<br> Go from tracking progress at the milestone level all the <br>way done to the smallest of details. 
+                Never lose sight of <br> the bigger picture again.</p>
         </div>
         <div class="contenedor">
             <p class=num>02</p>
         </div>
         <div class="contenido">
             <h3>Advance built-in reports</h3>
-            <p>Set internal delivery estimates and track progress 
-            toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.</p>
+            <p>Set internal delivery estimates and track progress toward <br> company goals. Our customisable dashboard helps you <br> build out the reports you need to keep key stakeholders <br> informed.</p>
         </div>
         <div class="contenedor">
             <p class=num>03</p>
         </div>
         <div class="contenido">
             <h3>Everything you need in one place</h3>
-            <p>Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one 
-                team productivity solution.</p>
+            <p>Stop jumping from one service to another to <br> communicate, store files, track tasks and share <br> documents. Manage offers an all-in-one 
+                team <br> productivity solution.</p>
         </div>
+        </section>
     </section>
-    <section id="card">
+    <section id="tarjetas">
         <h2>What they´ve said</h2>
+        <div id="contenedor-cards">
         <div class="cards">
             <img src="img/avatar-anisha.png">
             <h3>Ali Bravo</h3>
-            <p>“Manage has supercharged our team´s workflow. 
-                The ability to maintain visibility on larger milestones
+            <p>“Manage has supercharged our team´s workflow.<br> 
+                The ability to maintain visibility on larger milestones<br> 
                 at all times keeps everyone motivated.”</p>
         </div>
         <div class="cards">
             <img src="img/avatar-ali.png">
             <h3>Ali Bravo</h3>
-            <p>“Manage has supercharged our team´s workflow. 
-                The ability to maintain visibility on larger milestones
-                at all times keeps everyone motivated.”</p>
+            <p>“We have been able to cancel so many other<br>
+                subscriptions since using manage. 
+                There ir no <br> more cross-channel confusion and everyone is <br> much more focused.”</p>
         </div>
         <div class="cards">
             <img src="img/avatar-richard.png">
             <h3>Ali Bravo</h3>
-            <p>“Manage has supercharged our team´s workflow. 
-                The ability to maintain visibility on larger milestones
-                at all times keeps everyone motivated.”</p>
+            <p>“Manage allows us to provide structure and <br> process. 
+                It keeps us organized and focused. I can´t <br>stop recommending them to everyone i talk to!”</p>
         </div>
+    </div>
+    <button class="get-2"><a href="#">Get started</a></button>
     </section>
     <section>
         <div id="banner-final">
-            <h2>Simplify hoy your team
+            <h2>Simplify hoy your team<br>
                 words today.</h2>
-            <button>Get started</button>
+            <button class="get-3"><a href="#">Get started</a></button>
         </div>
     </section>
     
     <footer>
-        <img src="img/logo.svg" alt="logo">
+        <div id="social-media">
+        <img id="logo-footer" src="img/logo.svg" alt="logo">
         <div>
             <img src="img/icon-facebook.svg" alt="icon">
             <img src="img/icon-youtube.svg" alt="icon">
@@ -111,24 +114,33 @@
             <img src="img/icon-pinterest.svg" alt="icon">
             <img src="img/icon-instagram.svg" alt="icon">
         </div>
+       </div>
+       <div id="prueba">
         <nav>
+            <div id="lista-1">
             <ul type="none">
                 <li>Home</li>
                 <li>Pricing</li>
                 <li>Product</li>
                 <li>About us</li>
             </ul>
+        </div>
+        <div id="lista-2">
             <ul type="none">
                 <li>Careers</li>
                 <li>Community</li>
                 <li>Privacy Policy</li>
             </ul>
+        </div>
         </nav>
+    </div>
+        <div id="formulario-footer">
             <form action="">
                 <input type="text">
                 <input type="submit"> Go
             </form>
             <p>Copyright 2020. All Rights Reserved</p>  
+        </div>
     </footer>
     
 </body>
